# smart-energy

./: .gitignore  Makefile  README.md  docker-compose-dev.yaml
backend/: Dockerfile  Dockerfile.test  pyproject.toml
backend/app/: server.py
backend/app/api_models/: __init__.py  models.py
backend/app/database/: __init__.py  db_client.py  models.py
backend/tests/: README.md  conftest.py  test_api.py  test_connection.py  test_dependecies.py  test_dependencies.py  test_error.py  test_integration.py  test_models.py  test_performance.py
frontend/: Dockerfile.dev  Dockerfile.prod  index.html  package.json  tailwind.config.js  vite.config.js
frontend/components/: ProtectedRoute.jsx
frontend/src/: App.jsx  definitions.js  index.css
frontend/src/components/: Layout.jsx  Navigation.jsx  ProtectedRoute.jsx  UseSessionRestore.jsx
frontend/src/pages/: Home.jsx  Login.jsx
frontend/src/pages/(admin)/: AdminAccountsPage.jsx  AdminHomePage.jsx  AdminMetersPage.jsx  AdminObjectsPage.jsx  AdminPanel.jsx  AdminReportsPage.jsx
frontend/src/pages/(common)/: Home.jsx  Login.jsx  Unauthorized.jsx
frontend/src/pages/(manager)/: ManagerHomePage.jsx  ManagerMetersPage.jsx  ManagerPanel.jsx  ManagerReportsPage.jsx
frontend/src/pages/(technician)/: TechnicianDataEntryPage.jsx  TechnicianHomePage.jsx  TechnicianPanel.jsx
frontend/src/pages/(user)/: UserHomePage.jsx  UserMetersPage.jsx  UserPanel.jsx
frontend/src/scripts/: api.js  auth.js  session_manager.js
frontend/src/utils/: Cookies.jsx  axiosConfig.jsx
project_docs/: notes.tex  report.tex
