[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI application for handling web requests."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.34.0"
fastapi = "^0.115.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.server:start"